Song name is now not forgotten when refreshing the Profile Fragment